--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -49,14 +49,14 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Docker scan
-      run: |
-        docker scan --accept-license --version
-        docker scan my-python-app:latest
-
     - name: Build Docker image
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+
+    - name: Docker scan
+      run: |
+        docker scan --accept-license --version
+        docker scan $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
     - name: Push Docker image to Amazon ECR
       run: |
