--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -63,6 +63,6 @@ jobs:
 
     - name: Helm install or upgrade
       run: |
-        helm upgrade --install my-python-app ./helm/my-python-app \
+        helm upgrade --install my-python-app ../../helm/my-python-app \
           --set image.repository=$ECR_REGISTRY/$ECR_REPOSITORY \
           --set image.tag=$IMAGE_TAG
