test current directory

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -63,6 +63,7 @@ jobs:
 
     - name: Helm install or upgrade
       run: |
+        pwd
         helm upgrade --install my-python-app ../../helm/my-python-app \
           --set image.repository=$ECR_REGISTRY/$ECR_REPOSITORY \
           --set image.tag=$IMAGE_TAG
