--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -6,8 +6,8 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "alb"
     alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
+    alb.ingress.kubernetes.io/healthcheck-path: "/products"
 spec:
   rules:
     - http:
