--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,9 +31,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8
 
-    #- name: Static code analysis
-    #  run: |
-    #    flake8 .
+    - name: Static code analysis
+      run: |
+        flake8 .
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
