--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,18 +4,10 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
-  build-and-deploy:
+  lint-and-analyze:
     runs-on: ubuntu-latest
-
-    env:
-      ECR_REGISTRY: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
-      ECR_REPOSITORY: my-ecr-repo
-      IMAGE_TAG: ${{ github.sha }}
 
     steps:
     - name: Checkout code
@@ -26,44 +18,44 @@ jobs:
       with:
         python-version: '3.9'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8
+    - name: Install flake8
+      run: pip install flake8
 
-    - name: Static code analysis
-      run: |
-        flake8 .
+    - name: Lint Python code
+      run: flake8 app/
+
+    - name: Install hadolint
+      run: sudo wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v2.7.0/hadolint-Linux-x86_64 && sudo chmod +x /bin/hadolint
+
+    - name: Lint Dockerfile
+      run: hadolint Dockerfile
+
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    needs: lint-and-analyze
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
-    - name: Configure kubectl
-      uses: aws-actions/configure-aws-credentials@v1
+    - name: Log in to Azure Container Registry
+      uses: azure/docker-login@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+        login-server: ${{ secrets.ACR_LOGIN_SERVER }}
+        username: ${{ secrets.ACR_USERNAME }}
+        password: ${{ secrets.ACR_PASSWORD }}
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-
-    - name: Build Docker image
+    - name: Build and push Docker image
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/your-app-name:latest .
+        docker push ${{ secrets.ACR_LOGIN_SERVER }}/your-app-name:latest
 
-    - name: Push Docker image to Amazon ECR
-      run: |
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-
-    - name: Update kubeconfig
-      run: |
-        aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }}
-
-    - name: Helm install or upgrade
-      run: |
-        pwd
-        helm upgrade --install my-python-app ./helm \
-          --set image.repository=$ECR_REGISTRY/$ECR_REPOSITORY \
-          --set image.tag=$IMAGE_TAG
+    - name: Azure WebApp Deploy
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ secrets.AZURE_APP_NAME }}
+        slot-name: 'production'
+        images: ${{ secrets.ACR_LOGIN_SERVER }}/your-app-name:latest
