--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -50,12 +50,12 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/your-app-name:latest .
-        docker push ${{ secrets.ACR_LOGIN_SERVER }}/your-app-name:latest
+        docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/${{ secrets.AZURE_APP_NAME }}:latest .
+        docker push ${{ secrets.ACR_LOGIN_SERVER }}/${{ secrets.AZURE_APP_NAME }}:latest
 
     - name: Azure WebApp Deploy
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ secrets.AZURE_APP_NAME }}
         slot-name: 'production'
-        images: ${{ secrets.ACR_LOGIN_SERVER }}/your-app-name:latest
+        images: ${{ secrets.ACR_LOGIN_SERVER }}/${{ secrets.AZURE_APP_NAME }}:latest
