--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,6 +53,11 @@ jobs:
         docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/${{ secrets.AZURE_APP_NAME }}:latest .
         docker push ${{ secrets.ACR_LOGIN_SERVER }}/${{ secrets.AZURE_APP_NAME }}:latest
 
+    - name: Log in to Azure
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
     - name: Azure WebApp Deploy
       uses: azure/webapps-deploy@v2
       with:
