--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -54,10 +54,8 @@ jobs:
         docker push ${{ secrets.ACR_LOGIN_SERVER }}/${{ secrets.AZURE_APP_NAME }}:latest
 
     - name: Log in to Azure
-      uses: azure/login@v1.4.6
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-        enable-AzPSSession: true
+      run: |
+        az login --service-principal -u ${{ secrets.AZURE_SP_APP_ID }} -p ${{ secrets.AZURE_SP_PASSWORD }} --tenant ${{ secrets.AZURE_SP_TENANT }}
 
     - name: Azure WebApp Deploy
       uses: azure/webapps-deploy@v2
